@@ -42,6 +42,7 @@ mbrlen
 mbrtowc
 mbsinit
 memchr
+memrchr
 mkostemp
 non-recursive-gnulib-prefix-hack
 obstack
