@@ -223,3 +223,4 @@ xstrndup.m4
 /getprogname.m4
 /isblank.m4
 /limits-h.m4
+/memrchr.m4
